# apertium-shared

./: .gitignore  Makefile.am  README  apertium-shared.pc.in  configure.ac
src/: Makefile.am
